fixed skills, overflow home

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow-y: hidden;
 }
 
 .home--inner {
@@ -61,6 +62,7 @@
   align-items: center;
   font-size: 12px;
   width: 15rem;
+  height: 3.5rem;
 }
 
 .projects-skills-btn:hover {
